# mini_project

./: .gitignore  readme.md
.github/workflows/: c++-test.yml  python-test.yml
c++/async_task/: CMakeLists.txt  readme.md
c++/async_task/src/: CMakeLists.txt  task.cpp  task.h  task_queue.cpp  task_queue.h  work_thread.cpp  work_thread.h
c++/async_task/src/utils/: utils_define.h
c++/gtest_mini_project/: CMakeLists.txt  CTestTestfile.cmake
c++/gtest_mini_project/src/: CMakeLists.txt  my_even.cpp  my_even.h
c++/gtest_mini_project/tests/: CMakeLists.txt  test_demo  test_demo.cpp
py/: singleton.ipynb  var.ipynb
py/.ipynb_checkpoints/: singleton-checkpoint.ipynb
py/pytest_mini_project/: simplemath.py  test_simplemath.py
